@@ -29,6 +29,9 @@ Copyright (C) 1989-2010 M.J.E. Mol, MESA Consulting B.V."
 # define NO_DEBUG 1
 # include <kpathsea/config.h>
 # include <kpathsea/readable.h>
+#if defined(WIN32)
+# include <kpathsea/variable.h>
+#endif
 # include <sys/types.h>
 # include <sys/stat.h>
 #else
